[gd_scene load_steps=3 format=3 uid="uid://bj18loamxb20r"]

[ext_resource type="PackedScene" path="res://scenes/menus/VolumeSlider.tscn" id="1_cuhhp"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_h17y6"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h17y6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -43.0
offset_right = 56.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolumeSlider" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MasterVolumeSlider"]
layout_mode = 2
text = "Master Volume"

[node name="HSlider" parent="VBoxContainer/MasterVolumeSlider" instance=ExtResource("1_cuhhp")]
layout_mode = 2
bus_name = "Master"

[node name="MusicVolumeSlider" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MusicVolumeSlider"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Music"

[node name="HSlider" parent="VBoxContainer/MusicVolumeSlider" instance=ExtResource("1_cuhhp")]
layout_mode = 2
bus_name = "Music"

[node name="SfxVolumeSlider" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/SfxVolumeSlider"]
layout_mode = 2
size_flags_horizontal = 2
text = "SFX"

[node name="HSlider" parent="VBoxContainer/SfxVolumeSlider" instance=ExtResource("1_cuhhp")]
layout_mode = 2
bus_name = "SFX"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2

[node name="Credits Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="BackButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Back"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "Help"

[connection signal="pressed" from="VBoxContainer/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="BoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
